--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ h1 {
     font-size: 50px;
     text-align: center;
 }
+h2 { 
+    color:rgb(255, 0, 234);
+    font-size: 50px;
+    text-align: center;
+}
