--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ body{
 
 font-size: 30px;
 text-align: justify;
-color:red;
+color:rgb(0, 0, 0);
 }
 h1 { 
-    color:blue;
+    color:rgb(255, 0, 0);
     font-size: 50px;
     text-align: center;
 }
 h2 { 
     color:rgb(255, 0, 234);
     font-size: 50px;
-    text-align: center;
+    text-align: left;
 }
