--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ h2 {
     font-size: 50px;
     text-align: left;
 }
+h3 { 
+    color:rgb(0, 38, 255);
+    font-size: 50px;
+    text-align: left;
+}
