--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 h2 { 
     color:rgb(255, 0, 234);
     font-size: 50px;
-    text-align: left;
+    text-align: center;
 }
 h3 { 
     color:rgb(0, 38, 255);
