--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: beige;
+    background-color: rgb(0, 0, 0);
 
 font-size: 30px;
 text-align: justify;
-color:rgb(0, 0, 0);
+color:rgb(255, 255, 255);
 }
 h1 { 
     color:rgb(255, 0, 0);
