--- a/style.css
+++ b/style.css
@@ -25,3 +25,8 @@ h4 {
     font-size: 50px;
     text-align: left;
 }
+img { 
+    color:rgb(145, 255, 0);
+    font-size: 50px;
+    text-align: center;
+}
