--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h4 {
     font-size: 50px;
     text-align: left;
 }
-img { 
+h6 { 
     color:rgb(145, 255, 0);
     font-size: 50px;
     text-align: center;
