--- a/style.css
+++ b/style.css
@@ -30,3 +30,8 @@ h6 {
     font-size: 50px;
     text-align: center;
 }
+h6 { 
+    color:rgb(255, 0, 221);
+    font-size: 50px;
+    text-align: center;
+}
