--- a/style.css
+++ b/style.css
@@ -29,4 +29,8 @@ h6 {
     color:rgb(145, 255, 0);
     font-size: 50px;
     text-align: center;
+} 
+.tabela{
+    color :rgb(0, 119, 255) 
+    Font-size: 30px
 }
